# that-goes-there

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  docker-compose.yaml
.github/workflows/: audit.yaml  cli-functionality.yaml  clippy.yaml  docs.yaml  markdown-lint.yaml  tests.yaml
libthere/: Cargo.toml
libthere/src/: lib.rs
libthere/src/executor/: mod.rs  simple.rs  ssh.rs
libthere/src/ipc/: http.rs  mod.rs
libthere/src/log/: mod.rs
libthere/src/plan/: host.rs  mod.rs  visitor.rs
test/: hosts.yaml  invalid-plan.yaml  plan.yaml  ssh-hosts.yaml  ssh-plan.yaml  working-ssh-hosts.yaml
test/ci/: plan.yaml  ssh-hosts.yaml  ssh-plan.yaml
there-agent/: Cargo.toml
there-agent/src/: main.rs
there-cli/: Cargo.toml
there-cli/src/: main.rs
there-cli/src/commands/: mod.rs  plan.rs
there-cli/src/executor/: ssh.rs
there-controller/: Cargo.toml
there-controller/src/: executor.rs  http_server.rs  keys.rs  main.rs
there-controller/src/ssh/: mod.rs
