[package]
name = "there"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/queer/that-goes-there"
description = "A library for planning and executing commands on local and remote hosts."
license = "MIT"
readme = "../README.md"
keywords = ["ssh", "remote", "command", "execution", "tasks"]
categories = ["asynchronous", "concurrency", "network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.64"
color-eyre = { version = "0.6.2", features = ["issue-url"] }
derive-getters = "0.2.0"
futures = "0.3.25"
serde = { version = "1.0.152", features = ["derive"] }
shell-words = "1.1.0"
tarpc = { version = "0.31.0", features = ["full"] }
thrussh = "0.33.5"
thrussh-keys = "0.21.0"
tokio = { version = "1.25.0", features = ["full"] }
tokio-stream = "0.1.11"
tokio-util = { version = "0.7.4", features = ["codec"] }
tracing = { version = "0.1.37", features = ["async-await"] }
which = "4.4.0"
