[package]
name = "there"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/queer/that-goes-there"
description = "A library for planning and executing commands on local and remote hosts."
license = "MIT"
readme = "../README.md"
keywords = ["ssh", "remote", "command", "execution", "tasks"]
categories = ["asynchronous", "concurrency", "network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
color-eyre = { version = "0.6.2", features = ["issue-url"] }
derive-getters = "0.3.0"
futures = "0.3.28"
serde = { version = "1.0.188", features = ["derive"] }
shell-words = "1.1.0"
thrussh = "0.34.0"
thrussh-keys = "0.22.1"
tokio = { version = "1.33.0", features = ["full"] }
tokio-stream = "0.1.14"
tokio-util = { version = "0.7.9", features = ["codec"] }
tracing = { version = "0.1.39", features = ["async-await"] }
which = "4.4.2"
