[package]
name = "there-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = { version = "0.6.2", features = ["issue-url"] }
directories = "5.0.0"
there = { path = "../libthere" }
reqwest = { version = "0.11.16", features = ["blocking"] }
time = { version = "0.3.20", features = ["macros"] }
tracing-subscriber = { version = "0.3.17", features = ["json", "time"] }
