[package]
name = "there-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = { version = "0.6.2", features = ["issue-url"] }
directories = "5.0.1"
there = { path = "../libthere" }
reqwest = { version = "0.11.20", features = ["blocking"] }
time = { version = "0.3.29", features = ["macros"] }
tracing-subscriber = { version = "0.3.18", features = ["json", "time"] }
