[package]
name = "there-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
there = { path = "../libthere" }

async-trait = "0.1.68"
clap = { version = "4.3.8", features = ["cargo"] }
color-eyre = { version = "0.6.2", features = ["issue-url"] }
dialoguer = { version = "0.10.4", features = ["completion", "fuzzy-matcher", "fuzzy-select", "history"] }
derive-getters = "0.3.0"
futures = "0.3.28"
regex = "1.8.4"
reqwest = { version = "0.11.18", features = ["json"] }
serde_yaml = "0.9.21"
thiserror = "1.0.40"
thrussh = { version = "0.34.0", features = ["openssl"] }
thrussh-keys = { version = "0.22.1", features = ["openssl"] }
time = { version = "0.3.22", features = ["macros"] }
tokio = { version = "1.28.2", features = ["full"] }
tokio-stream = "0.1.14"
tokio-util = "0.7.8"
tracing-subscriber = { version = "0.3.17", features = ["json", "serde", "serde_json", "time", "tracing", "env-filter", "local-time"] }
tracing = { version = "0.1.38", features = ["async-await"] }
serde_json = "1.0.97"
