[package]
name = "there-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
there = { path = "../libthere" }

async-trait = "0.1.73"
clap = { version = "4.4.6", features = ["cargo"] }
color-eyre = { version = "0.6.2", features = ["issue-url"] }
dialoguer = { version = "0.11.0", features = ["completion", "fuzzy-matcher", "fuzzy-select", "history"] }
derive-getters = "0.3.0"
futures = "0.3.28"
regex = "1.10.0"
reqwest = { version = "0.11.22", features = ["json"] }
serde_yaml = "0.9.25"
thiserror = "1.0.49"
thrussh = { version = "0.34.0", features = ["openssl"] }
thrussh-keys = { version = "0.22.1", features = ["openssl"] }
time = { version = "0.3.29", features = ["macros"] }
tokio = { version = "1.33.0", features = ["full"] }
tokio-stream = "0.1.14"
tokio-util = "0.7.9"
tracing-subscriber = { version = "0.3.17", features = ["json", "serde", "serde_json", "time", "tracing", "env-filter", "local-time"] }
tracing = { version = "0.1.38", features = ["async-await"] }
serde_json = "1.0.107"
