[package]
name = "there-controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
there = { path = "../libthere" }

axum = "0.6.20"
color-eyre = { version = "0.6.2", features = ["issue-url"] }
futures = "0.3.28"
rand = "0.8.5"
thrussh = { version = "0.34.0", features = ["openssl"] }
thrussh-keys = { version = "0.22.1", features = ["openssl"] }
tokio = { version = "1.32.0", features = ["full"] }
network-interface = "1.0.2"
serde = { version = "1.0.185", features = ["derive"] }
quick_cache = "0.3.0"
nanoid = "0.4.0"
nanoid-dictionary = "0.4.3"
serde_json = "1.0.105"
hyper = "0.14.27"
tracing = "0.1.38"
thiserror = "1.0.47"
tracing-subscriber = { version = "0.3.17", features = ["json", "time"] }
time = { version = "0.3.27", features = ["macros", "formatting"] }
